Mise à jour de l'hauteur tonale

--- a/Caracteristiques acoustiques.ipynb
+++ b/Caracteristiques acoustiques.ipynb
@@ -39,8 +39,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xRPmSeX9fCDE",
-        "colab_type": "text"
+        "id": "xRPmSeX9fCDE"
       },
       "source": [
         "INF8770 Technologies multimédias\n",
@@ -53,8 +52,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OnI9xDKnfEz7",
-        "colab_type": "text"
+        "id": "OnI9xDKnfEz7"
       },
       "source": [
         "Exécuter les 2 lignes suivantes pour colab."
@@ -64,12 +62,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "gb1VkzerfFXG",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 153
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b177e8c-9e9d-41ae-e032-275c3eb31748"
+        "outputId": "a6bad886-420b-4033-dcf5-2833c23c7cdd"
       },
       "source": [
         "!git clone https://github.com/gabilodeau/INF8770\n",
@@ -80,13 +76,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'INF8770'...\n",
-            "remote: Enumerating objects: 67, done.\u001b[K\n",
-            "remote: Counting objects: 100% (67/67), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (57/57), done.\u001b[K\n",
-            "remote: Total 362 (delta 29), reused 29 (delta 9), pack-reused 295\u001b[K\n",
-            "Receiving objects: 100% (362/362), 28.54 MiB | 2.97 MiB/s, done.\n",
-            "Resolving deltas: 100% (183/183), done.\n",
+            "fatal: destination path 'INF8770' already exists and is not an empty directory.\n",
             "/content/INF8770\n"
           ],
           "name": "stdout"
@@ -96,9 +86,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OET-NTpAfCDG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "OET-NTpAfCDG"
       },
       "source": [
         "import numpy as np\n",
@@ -114,8 +102,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "z-dxoVeafCDR",
-        "colab_type": "text"
+        "id": "z-dxoVeafCDR"
       },
       "source": [
         "Lecture d'un fichier audio et affichage "
@@ -125,12 +112,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "g11wn5TpfCDU",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
         },
-        "outputId": "dcdb0826-301f-4604-bb6c-badf0281f011"
+        "outputId": "33431d22-f989-4cb6-fe4d-e4b84c00e481"
       },
       "source": [
         "[fs, signal] = wavfile.read('000.wav')\n",
@@ -158,8 +144,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "B56pi9ZcfCDc",
-        "colab_type": "text"
+        "id": "B56pi9ZcfCDc"
       },
       "source": [
         "Première caractéristique: Intensité"
@@ -169,12 +154,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "KviCaOCRfCDe",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4644731d-7f06-4025-ba94-1d185ce9282d"
+        "outputId": "d1628d7e-5792-4910-c7f6-627b36552703"
       },
       "source": [
         "Intensite = np.sqrt(np.sum(signal)**2);\n",
@@ -194,8 +177,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GCwcNoWDfCDk",
-        "colab_type": "text"
+        "id": "GCwcNoWDfCDk"
       },
       "source": [
         "Transformée de Fourier discrète du signal pour calculer les caractéristiques dans le domaine fréquentiel."
@@ -205,12 +187,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "TeDL27a0fCDl",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
         },
-        "outputId": "25822673-58bb-4fa0-c356-74e164973252"
+        "outputId": "12569928-9004-410a-b8f9-095de45c34fc"
       },
       "source": [
         "signalfreq = np.fft.fft(signal)\n",
@@ -238,8 +219,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6JVFI9fWfCDq",
-        "colab_type": "text"
+        "id": "6JVFI9fWfCDq"
       },
       "source": [
         "Détection des fréquences les plus importantes du signal. Noter que pour la détection de pics, celle-ci dépend beaucoup des paramètres. "
@@ -249,12 +229,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "7AOAtDblfCDr",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
         },
-        "outputId": "b24b44a3-e9d9-4391-e23b-9a4afc11767f"
+        "outputId": "d6cf40ea-5464-4719-b1fb-2546801b84d9"
       },
       "source": [
         "peaks = detect_peaks(signalfreq[range(0,int(len(signalfreq)/2))].real, mph=900000, mpd=30, show=True)\n",
@@ -287,28 +266,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Bu2k1B4QfCDv",
-        "colab_type": "text"
+        "id": "Bu2k1B4QfCDv"
       },
       "source": [
-        "Deuxième caractéristique: Hauteur tonale, le plus petit commun diviseur des pics."
+        "Deuxième caractéristique: Hauteur tonale, le pic avec la plus grande amplitude."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "enV18p3bfCDw",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "953c2989-0512-44e8-debf-c69d4e112581"
+        "outputId": "07ca1ba1-0e0c-4e66-fc3d-c7a04e4ca125"
       },
       "source": [
-        "hauteurtonale = peaks[1]\n",
+        "hauteurtonale = 0\n",
+        "max = 0\n",
         "for i in range(1,len(peaks)):\n",
-        "    hauteurtonale = gcd(hauteurtonale,peaks[i])\n",
+        "    if signalfreq[peaks[i]]>max : \n",
+        "      hauteurtonale = peaks[i]\n",
+        "      max = signalfreq[peaks[i]]\n",
         "    \n",
         "print('Hauteur tonale= ', hauteurtonale)"
       ],
@@ -317,7 +296,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Hauteur tonale=  1\n"
+            "Hauteur tonale=  822\n"
           ],
           "name": "stdout"
         }
@@ -326,8 +305,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4wmHoLnkfCDz",
-        "colab_type": "text"
+        "id": "4wmHoLnkfCDz"
       },
       "source": [
         "Troisième caractéristique: Brillance, la moyenne des pics."
@@ -337,12 +315,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ABMMufQAfCD0",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d9bed9a7-a482-4b0d-f7cf-f92b662b2898"
+        "outputId": "1420397f-6e75-4cf7-ae33-6630ae55a87a"
       },
       "source": [
         "brillance = np.mean(peaks)\n",
@@ -362,8 +338,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "u1n64_sufCD3",
-        "colab_type": "text"
+        "id": "u1n64_sufCD3"
       },
       "source": [
         "Quatrième caractéristique: Largeur de bande, la moyenne des pics auxquels on soustrait la brillance."
@@ -373,12 +348,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2c_j3OUjfCD3",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "87e1b40d-8df3-4267-92eb-8c51ea70c504"
+        "outputId": "307dbe41-3c5d-4225-b9b5-23d4d0b5e1fc"
       },
       "source": [
         "largeurdebande = np.mean(abs(peaks - brillance))\n",
@@ -398,14 +371,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Oe6CRMICfCD6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Oe6CRMICfCD6"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
