Correction d'un bogue pour les indices des positions.

--- a/Codage LZ77.ipynb
+++ b/Codage LZ77.ipynb
@@ -39,8 +39,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ewoVov79hKE9",
-        "colab_type": "text"
+        "id": "ewoVov79hKE9"
       },
       "source": [
         "INF8770 Technologies multimédias\n",
@@ -55,8 +54,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aKnE9vhhhKE_",
-        "colab_type": "text"
+        "id": "aKnE9vhhhKE_"
       },
       "source": [
         "Message à compresser. Ici, une chaine de caractères."
@@ -65,12 +63,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3Heq5COzhKFC",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3Heq5COzhKFC"
       },
       "source": [
-        "message = \"ABAACABAABBAABBABCEDAABADA\""
+        "message = \"CBAAAAAAAAAAAAAAAAAAAAABAABAACD\""
       ],
       "execution_count": 1,
       "outputs": []
@@ -78,8 +74,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uc0ha1Y5hKFN",
-        "colab_type": "text"
+        "id": "uc0ha1Y5hKFN"
       },
       "source": [
         "Paramètre de la méthode. Il faut choisir la taille du dictionnaire."
@@ -88,21 +83,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jVNzq4dyhKFP",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jVNzq4dyhKFP"
       },
       "source": [
-        "tailleDict = 4  # Taille du dictionnaire (0,1,2,3,...)"
+        "tailleDict = 6  # Taille du dictionnaire (0,1,2,3,...)"
       ],
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "399Nvkg5hKFX",
-        "colab_type": "text"
+        "id": "399Nvkg5hKFX"
       },
       "source": [
         "Application du codage LZ77."
@@ -112,12 +104,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JHo8VEsChKFY",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 547
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9be146cc-d5d6-4c49-80a0-b3682dbe97ab"
+        "outputId": "15376771-7011-4767-ef37-05d60626b4b3"
       },
       "source": [
         "triplets = []  # Pour sauvegarder les triplets\n",
@@ -125,6 +115,9 @@
         "index = 0  # Position courante dans le message\n",
         "while index < len(message):\n",
         "    symbDict = message[max(0, index - tailleDict): index]  # Symboles disponibles du dictionnaire\n",
+        "    decalage = 0\n",
+        "    if len(symbDict) < tailleDict:\n",
+        "        decalage = tailleDict - len(symbDict) - 1 #Pour ajuster les indices de position quand le dictionnaire n'est pas plein.\n",
         "    print(symbDict)\n",
         "    sousChaine = message[index:len(message)-1] #Le dernier caractère sera ajouté comme 3e élément du dernier triplet\n",
         "\n",
@@ -146,58 +139,42 @@
         "\n",
         "    # Enregistrement des triplets\n",
         "    c = message[index + length]  #Caractère suivant non encodé.\n",
-        "        \n",
-        "    triplets.append((pos, length, c))\n",
+        "\n",
+        "    if length == 0:\n",
+        "      decalage = 0\n",
+        "\n",
+        "    triplets.append((pos - decalage, length, c))\n",
         "\n",
         "    index += max(length+1, 1)  # Avance la position dans le message\n",
         "\n",
         "    print(triplets)"
       ],
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
-            "[(0, 0, 'A')]\n",
-            "A\n",
-            "[(0, 0, 'A'), (0, 0, 'B')]\n",
-            "AB\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A')]\n",
-            "ABAA\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C')]\n",
-            "BAAC\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B')]\n",
-            "ACAB\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A')]\n",
-            "ABAA\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B')]\n",
-            "AABB\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B')]\n",
-            "BBAB\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C')]\n",
-            "BABC\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E')]\n",
-            "ABCE\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D')]\n",
-            "BCED\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A')]\n",
-            "CEDA\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (3, 1, 'B')]\n",
-            "DAAB\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (3, 1, 'B'), (2, 1, 'D')]\n",
-            "ABAD\n",
-            "[(0, 0, 'A'), (0, 0, 'B'), (0, 1, 'A'), (0, 0, 'C'), (2, 1, 'B'), (2, 1, 'A'), (1, 1, 'B'), (0, 5, 'B'), (0, 0, 'C'), (0, 0, 'E'), (0, 0, 'D'), (0, 0, 'A'), (3, 1, 'B'), (2, 1, 'D'), (0, 0, 'A')]\n"
-          ],
-          "name": "stdout"
+            "[(0, 0, 'C')]\n",
+            "C\n",
+            "[(0, 0, 'C'), (0, 0, 'B')]\n",
+            "CB\n",
+            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A')]\n",
+            "CBA\n",
+            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (0, 20, 'B')]\n",
+            "AAAAAB\n",
+            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (0, 20, 'B'), (3, 5, 'C')]\n",
+            "AABAAC\n",
+            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (0, 20, 'B'), (3, 5, 'C'), (0, 0, 'D')]\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FevmjX9ehKFh",
-        "colab_type": "text"
+        "id": "FevmjX9ehKFh"
       },
       "source": [
         "Décodage du message. "
@@ -207,7 +184,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "GYCw_0CRhKFi",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -228,7 +204,7 @@
         "print(messageDecode)\n",
         "print(message == messageDecode)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +220,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "fIUY1RVAhKFn",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -255,7 +230,7 @@
         "print('Taux de compression: ', 1 - (len(triplets) * 3) / (len(message))) \n",
         "#On suppose des octets pour position, longueur"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,9 +244,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xn8gDKpwhKFr",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xn8gDKpwhKFr"
       },
       "source": [
         ""
