Correction bogue pour les indices de position

--- a/Codage LZ77.ipynb
+++ b/Codage LZ77.ipynb
@@ -88,7 +88,7 @@
       "source": [
         "tailleDict = 6  # Taille du dictionnaire (0,1,2,3,...)"
       ],
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -107,17 +107,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "15376771-7011-4767-ef37-05d60626b4b3"
+        "outputId": "f53cd033-4475-47b6-91e6-40e61993f03c"
       },
       "source": [
         "triplets = []  # Pour sauvegarder les triplets\n",
         "\n",
         "index = 0  # Position courante dans le message\n",
         "while index < len(message):\n",
-        "    symbDict = message[max(0, index - tailleDict): index]  # Symboles disponibles du dictionnaire\n",
         "    decalage = 0\n",
+        "    symbDict = message[max(0, index - tailleDict): index]  # Symboles disponibles du dictionnaire\n",
         "    if len(symbDict) < tailleDict:\n",
-        "        decalage = tailleDict - len(symbDict) - 1 #Pour ajuster les indices de position quand le dictionnaire n'est pas plein.\n",
+        "      decalage = tailleDict - len(symbDict) #Pour l'ajustement des indices de position quand le dictionnaire n'est pas plein.\n",
         "    print(symbDict)\n",
         "    sousChaine = message[index:len(message)-1] #Le dernier caractère sera ajouté comme 3e élément du dernier triplet\n",
         "\n",
@@ -141,15 +141,17 @@
         "    c = message[index + length]  #Caractère suivant non encodé.\n",
         "\n",
         "    if length == 0:\n",
-        "      decalage = 0\n",
+        "      pos = 0\n",
+        "    else:\n",
+        "      pos = pos + decalage #Pour l'ajustement des indices de position quand le dictionnaire n'est pas plein.\n",
         "\n",
-        "    triplets.append((pos - decalage, length, c))\n",
+        "    triplets.append((pos, length, c))\n",
         "\n",
         "    index += max(length+1, 1)  # Avance la position dans le message\n",
         "\n",
         "    print(triplets)"
       ],
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,11 +164,11 @@
             "CB\n",
             "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A')]\n",
             "CBA\n",
-            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (0, 20, 'B')]\n",
+            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (5, 20, 'B')]\n",
             "AAAAAB\n",
-            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (0, 20, 'B'), (3, 5, 'C')]\n",
+            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (5, 20, 'B'), (3, 5, 'C')]\n",
             "AABAAC\n",
-            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (0, 20, 'B'), (3, 5, 'C'), (0, 0, 'D')]\n"
+            "[(0, 0, 'C'), (0, 0, 'B'), (0, 0, 'A'), (5, 20, 'B'), (3, 5, 'C'), (0, 0, 'D')]\n"
           ]
         }
       ]
@@ -185,10 +187,9 @@
       "metadata": {
         "id": "GYCw_0CRhKFi",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d5996c68-ca57-4411-c755-331952a2998b"
+        "outputId": "16a1bb2f-00f0-4e68-d259-78c1ea0f1cab"
       },
       "source": [
         "messageDecode = ''\n",
@@ -197,22 +198,25 @@
         "    if (pos, length) == (0, 0):\n",
         "        messageDecode += char\n",
         "    else:\n",
+        "        decalage = 0\n",
+        "        if len(messageDecode) < tailleDict:\n",
+        "          decalage = tailleDict - len(messageDecode) #Pour l'ajustement des indices de position quand le dictionnaire n'est pas plein.\n",
         "        start = max(0, len(messageDecode) - tailleDict)\n",
         "        for i in range(length):\n",
-        "            messageDecode += messageDecode[start+pos+i]\n",
+        "            messageDecode += messageDecode[start+pos-decalage+i]\n",
         "        messageDecode += char\n",
         "print(messageDecode)\n",
         "print(message == messageDecode)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "ABAACABAABBAABBABCEDAABADA\n",
+            "CBAAAAAAAAAAAAAAAAAAAAABAABAACD\n",
             "True\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -221,23 +225,22 @@
       "metadata": {
         "id": "fIUY1RVAhKFn",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9ee5bd67-9d95-42e1-b5cb-aeba47db6cde"
+        "outputId": "774a1dcc-b351-4435-d238-3af49d0fd094"
       },
       "source": [
         "print('Taux de compression: ', 1 - (len(triplets) * 3) / (len(message))) \n",
         "#On suppose des octets pour position, longueur"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Taux de compression:  -0.7307692307692308\n"
-          ],
-          "name": "stdout"
+            "Taux de compression:  0.4193548387096774\n"
+          ]
         }
       ]
     },
@@ -249,7 +252,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     }
   ]
