Ajout du calcul d'entropie

--- a/Codage Huffman.ipynb
+++ b/Codage Huffman.ipynb
@@ -39,8 +39,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Otl17dQ2gDNX",
-        "colab_type": "text"
+        "id": "Otl17dQ2gDNX"
       },
       "source": [
         "INF8770 Technologies multimédias\n",
@@ -53,8 +52,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tlHk-7kigfRz",
-        "colab_type": "text"
+        "id": "tlHk-7kigfRz"
       },
       "source": [
         "Exécuter la ligne suivante pour colab"
@@ -64,51 +62,43 @@
       "cell_type": "code",
       "metadata": {
         "id": "_8J4A7mPgcNE",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 139
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9591da2-c220-4563-de43-c2994911b361"
+        "outputId": "5355648c-b1ea-4ec9-88cb-41006f009f2c"
       },
       "source": [
         "!pip install anytree"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Collecting anytree\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a8/65/be23d8c3ecd68d40541d49812cd94ed0f3ee37eb88669ca15df0e43daed1/anytree-2.8.0-py2.py3-none-any.whl (41kB)\n",
-            "\r\u001b[K     |███████▉                        | 10kB 16.7MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 20kB 1.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 30kB 1.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 40kB 2.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 1.6MB/s \n",
-            "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from anytree) (1.15.0)\n",
-            "Installing collected packages: anytree\n",
-            "Successfully installed anytree-2.8.0\n"
-          ],
-          "name": "stdout"
+            "Requirement already satisfied: anytree in /usr/local/lib/python3.10/dist-packages (2.12.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from anytree) (1.16.0)\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vEL_HFc2gDNb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vEL_HFc2gDNb"
       },
       "source": [
         "import numpy as np\n",
+        "import math\n",
         "from anytree import Node, RenderTree, PreOrderIter, AsciiStyle"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sa8dGc6cgDNk",
-        "colab_type": "text"
+        "id": "sa8dGc6cgDNk"
       },
       "source": [
         "Message à coder"
@@ -117,21 +107,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TdUX0hIFgDNl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "TdUX0hIFgDNl"
       },
       "source": [
         "Message = \"EBFFBEABEFCFDEBBFFFEFEFCCBFACBBABCDACDCABABBBCDDCDCAAABBBABABAABAAB\""
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ICArX3GjgDNr",
-        "colab_type": "text"
+        "id": "ICArX3GjgDNr"
       },
       "source": [
         "Préparation pour la création de l'arbre. On trouve les feuilles (symboles) et leurs poids (nb occurences)."
@@ -140,13 +127,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eAE_QCKigDNs",
-        "colab_type": "code",
-        "colab": {}
+        "id": "eAE_QCKigDNs"
       },
       "source": [
         "#Liste qui sera modifié jusqu'à ce qu'elle contienne seulement la racine de l'arbre\n",
-        "ArbreSymb =[[Message[0], Message.count(Message[0]), Node(Message[0])]] \n",
+        "ArbreSymb =[[Message[0], Message.count(Message[0]), Node(Message[0])]]\n",
         "#dictionnaire obtenu à partir de l'arbre.\n",
         "dictionnaire = [[Message[0], '']]\n",
         "nbsymboles = 1\n",
@@ -157,53 +142,51 @@
         "        ArbreSymb += [[Message[i], Message.count(Message[i]),Node(Message[i])]]\n",
         "        dictionnaire += [[Message[i], '']]\n",
         "        nbsymboles += 1\n",
-        "        \n",
-        "longueurOriginale = np.ceil(np.log2(nbsymboles))*len(Message)    "
+        "\n",
+        "longueurOriginale = np.ceil(np.log2(nbsymboles))*len(Message)\n",
+        "\n",
+        "OccSymb = ArbreSymb.copy()"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nCjmn5cQgDNx",
-        "colab_type": "text"
+        "id": "nCjmn5cQgDNx"
       },
       "source": [
-        "Affichage des feuilles trouvées. Les feuilles sont triées pour la construction de l'arbre selon l'algorithme Huffman "
+        "Affichage des feuilles trouvées. Les feuilles sont triées pour la construction de l'arbre selon l'algorithme Huffman"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fqeUeqEXgDNy",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9afe7186-1444-44d2-fce6-b5dee97ae8bf"
+        "outputId": "203f8c82-97fd-461a-f1b7-c489b973be5b"
       },
       "source": [
         "ArbreSymb = sorted(ArbreSymb, key=lambda x: x[1])\n",
         "print(ArbreSymb)"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[['E', 6, Node('/E')], ['D', 6, Node('/D')], ['F', 10, Node('/F')], ['C', 10, Node('/C')], ['A', 15, Node('/A')], ['B', 20, Node('/B')]]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mkCDPzgMgDN4",
-        "colab_type": "text"
+        "id": "mkCDPzgMgDN4"
       },
       "source": [
         "Création de l'arbre"
@@ -213,21 +196,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "hh9PnKYKgDN5",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ea10bfda-1183-4743-f987-a339fb155fc3"
+        "outputId": "9ededd8e-b2fe-45de-e34a-1f0671a3f2b9"
       },
       "source": [
         "while len(ArbreSymb) > 1:\n",
         "    #Fusion des noeuds de poids plus faibles\n",
-        "    symbfusionnes = ArbreSymb[0][0] + ArbreSymb[1][0] \n",
+        "    symbfusionnes = ArbreSymb[0][0] + ArbreSymb[1][0]\n",
         "    #Création d'un nouveau noeud\n",
         "    noeud = Node(symbfusionnes)\n",
         "    temp = [symbfusionnes, ArbreSymb[0][1] + ArbreSymb[1][1], noeud]\n",
-        "    #Ajustement de l'arbre pour connecter le nouveau avec ses parents \n",
+        "    #Ajustement de l'arbre pour connecter le nouveau avec ses parents\n",
         "    ArbreSymb[0][2].parent = noeud\n",
         "    ArbreSymb[1][2].parent = noeud\n",
         "    #Enlève les noeuds fusionnés de la liste de noeud à fusionner.\n",
@@ -238,14 +219,15 @@
         "    print('\\nArbre actuel:\\n\\n')\n",
         "    for i in range(len(ArbreSymb)):\n",
         "        if len(ArbreSymb[i][0]) > 1:\n",
-        "            print(RenderTree(ArbreSymb[i][2], style=AsciiStyle()).by_attr())   \n",
-        "    ArbreSymb = sorted(ArbreSymb, key=lambda x: x[1])  \n",
+        "            print(RenderTree(ArbreSymb[i][2], style=AsciiStyle()).by_attr())\n",
+        "    ArbreSymb = sorted(ArbreSymb, key=lambda x: x[1])\n",
         "    print(ArbreSymb)"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "Arbre actuel:\n",
@@ -310,31 +292,27 @@
             "        |-- F\n",
             "        +-- C\n",
             "[['EDABFC', 67, Node('/EDABFC')]]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kbOnLW7UgDN-",
-        "colab_type": "text"
+        "id": "kbOnLW7UgDN-"
       },
       "source": [
-        "On traverse l'arbre des symboles par parcours préfix, et on construit un arbre semblable de codes binaires. Le premier enfant avec 0, le deuxième avec 1.  Ensuite, on utilisera les 2 arbres pour construire le dictionnaire. "
+        "On traverse l'arbre des symboles par parcours préfix, et on construit un arbre semblable de codes binaires. Le premier enfant avec 0, le deuxième avec 1.  Ensuite, on utilisera les 2 arbres pour construire le dictionnaire."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "YVHGEgJOgDOA",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 493
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "125190b7-53eb-460d-ebb0-efe15f2614a2"
+        "outputId": "f35d04b6-673c-4dde-fd0d-16103697e74e"
       },
       "source": [
         "ArbreCodes = Node('')\n",
@@ -344,7 +322,7 @@
         "parcoursprefix = parcoursprefix[1:len(parcoursprefix)] #ignore la racine\n",
         "\n",
         "Prevdepth = 0 #pour suivre les mouvements en profondeur dans l'arbre\n",
-        "for node in parcoursprefix:  #Liste des noeuds \n",
+        "for node in parcoursprefix:  #Liste des noeuds\n",
         "    if Prevdepth < node.depth: #On va plus profond dans l'arbre, on met un 0\n",
         "        temp = Node(noeud.name + '0')\n",
         "        noeud.children = [temp]\n",
@@ -362,16 +340,17 @@
         "        noeud.children = [noeud.children[0], temp]\n",
         "        if node.children:\n",
         "            noeud = temp\n",
-        "        \n",
-        "    Prevdepth = node.depth    \n",
-        "    \n",
-        "print('\\nArbre des codes:\\n\\n',RenderTree(ArbreCodes, style=AsciiStyle()).by_attr())         \n",
-        "print('\\nArbre des symboles:\\n\\n', RenderTree(ArbreSymb[0][2], style=AsciiStyle()).by_attr())                "
+        "\n",
+        "    Prevdepth = node.depth\n",
+        "\n",
+        "print('\\nArbre des codes:\\n\\n',RenderTree(ArbreCodes, style=AsciiStyle()).by_attr())\n",
+        "print('\\nArbre des symboles:\\n\\n', RenderTree(ArbreSymb[0][2], style=AsciiStyle()).by_attr())"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "Arbre des codes:\n",
@@ -401,8 +380,7 @@
             "    +-- FC\n",
             "        |-- F\n",
             "        +-- C\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -410,12 +388,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y0ZNqTu2gDOH",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7e4eee2-089b-4b8e-d3b6-46fce5a38dd8"
+        "outputId": "4300c050-e891-4b70-9c9c-76e48a72a23b"
       },
       "source": [
         "ArbreSymbList = [node for node in PreOrderIter(ArbreSymb[0][2])]\n",
@@ -427,25 +403,24 @@
         "        if temp:\n",
         "            indice = dictionnaire.index(temp[0])\n",
         "            dictionnaire[indice][1] = ArbreCodeList[i].name\n",
-        "            \n",
-        "print(dictionnaire) "
+        "\n",
+        "print(dictionnaire)"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[['E', '000'], ['B', '10'], ['F', '110'], ['A', '01'], ['C', '111'], ['D', '001']]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oIf0-eVMgDOK",
-        "colab_type": "text"
+        "id": "oIf0-eVMgDOK"
       },
       "source": [
         "Codage du message avec le dictionnaire"
@@ -454,51 +429,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mNp58IZ1gDOK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mNp58IZ1gDOK"
       },
       "source": [
         "MessageCode = []\n",
-        "longueur = 0 \n",
+        "longueur = 0\n",
         "for i in range(len(Message)):\n",
         "    substitution = list(filter(lambda x: x[0] == Message[i], dictionnaire))\n",
         "    MessageCode += [substitution[0][1]]\n",
-        "    longueur += len(substitution[0][1]) "
+        "    longueur += len(substitution[0][1])"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "piDeqhNhgDOQ",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "05400005-cf20-46cb-c028-fbd0f6d3eafe"
+        "outputId": "d8fdeced-5d7a-4423-c558-b5fa1774a66a"
       },
       "source": [
         "print(MessageCode)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "['000', '10', '110', '110', '10', '000', '01', '10', '000', '110', '111', '110', '001', '000', '10', '10', '110', '110', '110', '000', '110', '000', '110', '111', '111', '10', '110', '01', '111', '10', '10', '01', '10', '111', '001', '01', '111', '001', '111', '01', '10', '01', '10', '10', '10', '111', '001', '001', '111', '001', '111', '01', '01', '01', '10', '10', '10', '01', '10', '01', '10', '01', '01', '10', '01', '01', '10']\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ngVWAm6qgDOT",
-        "colab_type": "text"
+        "id": "ngVWAm6qgDOT"
       },
       "source": [
         "Longueur en bits du message codé et celle de l'original"
@@ -508,41 +478,64 @@
       "cell_type": "code",
       "metadata": {
         "id": "c2ZNI3O4gDOT",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b5678011-7ac2-4c00-fb70-3cf72f50c7d3"
+        "outputId": "61f55991-416a-4e64-9db2-06e35e8ed9ff"
       },
       "source": [
         "print(\"Longueur = {0}\".format(longueur))\n",
         "print(\"Longueur originale = {0}\".format(longueurOriginale))"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Longueur = 166\n",
             "Longueur originale = 201.0\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Espérance de la longueur d'un code avec Huffman vs Entropie"
+      ],
+      "metadata": {
+        "id": "17oA6mOojzPI"
+      }
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2OvSltPngDOW",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "412901a3-8430-4867-84a4-ae7cede1bbfa"
       },
       "source": [
-        ""
+        "print('Espérance: ' + str(longueur/len(Message)))\n",
+        "entropie =0\n",
+        "for i in range(nbsymboles):\n",
+        "  entropie = entropie-(OccSymb[i][1]/len(Message))*math.log(OccSymb[i][1]/len(Message),2)\n",
+        "\n",
+        "print('Entropie: ' + str(entropie))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Espérance: 2.4776119402985075\n",
+            "Entropie: 2.446685716752158\n"
+          ]
+        }
+      ]
     }
   ]
 }
